fix css on safari

--- a/app/scripts/components/caseslist/casesList.less
+++ b/app/scripts/components/caseslist/casesList.less
@@ -55,6 +55,8 @@
         }
         .icon-desc {
           margin-top: -2px;
+          font-size: 16px;
+          letter-spacing: 0px;
         }
       }
     }
